Fixed Blog/Sidebar Wrapping
May replace with sidebar hiding when screen too small...

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,13 +1,15 @@
 .blogMasterContainer {
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     margin-top: 110px;
 }
 
 .blogContainer {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    max-width: 70%;
+    width: 70%;
+    min-width: 500px;
     background: #BCBABE;
     margin-left: auto;
     margin-right: auto;
@@ -44,8 +46,8 @@
 
 .sidebar {
     background: orange;
-    width: 100%;
-    max-width: 20%;
+    width: 20%;
+    min-width: 200px;
     margin-left: auto;
     margin-right: auto;
 }
